--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+}
+.img{
+  margin-top: 10px;
+    object-fit: cover;
+    width: 200px;
+    height: 200px;
+
+}
+.post{
+  width: 50%;
+  margin: auto;
+}
+
+h1{
+  font-weight: bold;
 }
 
 code {
