--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  text-align: center;
-  justify-content: center;
-  display: flex;
 }
 .img{
   margin-top: 10px;
@@ -20,10 +17,19 @@ body {
 }
 
 h1{
+  font-family: 'Inter', sans-serif;;
   font-weight: bold;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.glass{
+  background-color: linear-gradient(135deg,rgb(48, 51, 51),rgb(36, 44, 44),0 );
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(147, 164, 165, 0.2);
+  box-shadow: 0 8px 23px 0 rgba(255, 255, 255, 0.2);
 }
