--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,9 @@
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+  background-color: rgb(49, 117, 121);
+
 }
 .img{
   margin-top: 10px;
