--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,8 @@ body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
-  background-color: rgb(49, 117, 121);
+  background: rgb(49, 117, 121);
+  color: white;
 
 }
 .img{
@@ -14,10 +15,7 @@ body {
     height: 200px;
 
 }
-.post{
-  width: 50%;
-  margin: auto;
-}
+
 
 h1{
   font-family: 'Inter', sans-serif;;
@@ -29,7 +27,7 @@ code {
     monospace;
 }
 .glass{
-  background-color: linear-gradient(135deg,rgb(48, 51, 51),rgb(36, 44, 44),0 );
+  background: linear-gradient(135deg,rgb(48, 51, 51),rgb(36, 44, 44),0 );
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-radius: 10px;
