--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,11 @@
 
+p{
+  color:white;  
+}
+
+input{
+  font-family: 'Poppins', sans-serif;
+}
 .Header{
     height: 100vh;
     display: flex;
@@ -18,7 +25,16 @@
     color: rgb(255, 240, 153);
     font-size: 350%;
 }
-
+.pick-file {
+  color: rgb(67, 1, 128);
+  font-size: 35px;
+  margin:0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  
+}
 
 .image-container {
   width: 500px; /* set width of image container */
@@ -75,8 +91,71 @@ object-fit: cover;
   font-size: 120%;
   
 }
-  .item{
-    margin-top: 30px;
-    margin-bottom: 15px;
-   
-  }
+.item{
+  margin-top: 30px;
+  margin-bottom: 15px;
+  
+}
+.post-container{
+  min-height: 35vh;
+  margin: auto;
+  width: 50vw;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background: linear-gradient(135deg,rgb(48, 51, 51),rgb(36, 44, 44),0 );
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  box-shadow: 0 8px 23px 0 rgba(0, 0, 0, 0.2);
+}
+
+.post-input1{
+  border: none;
+  background-color: rgb(11, 58, 58);
+  width: 300px;
+  height: 30px;
+  color: aliceblue;
+  outline: none;
+  margin: 10px;
+  margin-top: 15px;
+  
+}
+.post-input2{
+  border: none;
+  background-color: rgb(11, 58, 58);
+  width: 1000px;
+  height: 200px;
+  color: aliceblue;
+  outline: none;
+  margin: 10px;
+  
+}
+.post-container button{
+  background: rgb(150, 172, 110);
+  color: white;
+  font-weight: bold;
+  border: none;
+  width: 100px;
+  height: 40px;
+  margin-left: 15px;
+  margin-bottom: 5px;
+  font-family: 'Poppins', sans-serif;
+  border-radius: 5px;
+}
+.posts-container{
+  min-height: 35vh;
+  margin: auto;
+  margin-top: 30px;
+  width: 50vw;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background: linear-gradient(135deg,rgb(48, 51, 51),rgb(36, 44, 44),0 );
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  box-shadow: 0 8px 23px 0 rgba(0, 0, 0, 0.2);
+}
