--- a/frontend/src/styles/login.module.css
+++ b/frontend/src/styles/login.module.css
@@ -3,15 +3,22 @@
   height: 100vh;
 }
 .left{
- width: 40%;
+ width: 30%;
  background: rgb(49, 117, 121);
+ border-right: solid 4px rgb(255, 240, 153);
+ box-shadow: 200px 300px 300px 400px rgba(8, 8, 8, 0.863);
+ backdrop-filter: blur(10px);
+ -webkit-backdrop-filter: blur(10px);
+
 }
 .left h1{
-  margin: 0;
+  margin: 10;
+  font-size: 300%;
   color: rgb(255, 240, 153);
+  text-align: center;
 }
 .right{
-  width: 60%;
+  width: 70%;
   height: 100vh;
   background: black;
 }
@@ -29,3 +36,83 @@
   max-height: 150%;
   object-fit: cover;
 }
+.input {
+  max-width: 190px;
+  height: 44px;
+  background-color: #05060f0a;
+  border-radius: .5rem;
+  padding: 0 1rem;
+  border: 2px solid transparent;
+  font-size: 1rem;
+  transition: border-color .3s cubic-bezier(.25,.01,.25,1) 0s, color .3s cubic-bezier(.25,.01,.25,1) 0s,background .2s cubic-bezier(.25,.01,.25,1) 0s;
+}
+
+.label {
+  display: block;
+  margin-bottom: .3rem;
+  font-size: .9rem;
+  font-weight: bold;
+  color: #05060f99;
+  transition: color .3s cubic-bezier(.25,.01,.25,1) 0s;
+}
+
+.input:hover, .input:focus, .input-group:hover .input {
+  outline: none;
+  border-color: #05060f;
+}
+
+.input-group:hover .label, .input:focus {
+  color: #05060fc2;
+}
+.inputs{
+  margin: 15px;
+ 
+}
+.container{
+  margin: auto;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+
+}
+.button {
+  appearance: none;
+  background-color: rgb(255, 240, 153);
+  border: 0.125em solid #383838;
+  border-radius: 0.9375em;
+  box-sizing: border-box;
+  color: #383838;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 3.75em;
+  min-width: 0;
+  outline: none;
+  padding: 1em 2.3em;
+  text-align: center;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+  margin: 5px;
+ }
+ 
+ .button:disabled {
+  pointer-events: none;
+ }
+ 
+ .button:hover {
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+ }
+ 
+ .button:active {
+  box-shadow: none;
+  transform: translateY(0);
+ }
