--- a/frontend/src/styles/styles.module.css
+++ b/frontend/src/styles/styles.module.css
@@ -1,10 +1,18 @@
 
 p{
-  color:white;  
+  color:white; 
+   
 }
 
 input{
   font-family: 'Poppins', sans-serif;
+  text-align: start;
+  margin-left:10px;
+}
+textarea{
+  font-family: 'Poppins', sans-serif;
+  text-align: start;
+  margin-left:10px;
 }
 .Header{
     height: 90vh;
@@ -25,11 +33,13 @@ input{
     color: rgb(255, 240, 153);
     font-size: 350%;
 }
+
 .pick_file {
   color: rgb(67, 1, 128);
   font-size: 35px;
-  margin:0;
-  display: flex;
+  margin:10px;
+ 
+  display: inline;
   justify-content: center;
   align-items: center;
   
@@ -44,7 +54,7 @@ input{
   display: flex; /* Add display flex to center image vertically */
   align-items: center; /* Center image vertically */
   justify-content: center; /* Center image horizontally */
-
+  
   }
   
 .image_container img {
@@ -54,6 +64,7 @@ object-fit: cover;
 
 
 }
+
 .text_container{
     display: flex;
     flex-direction: column;
@@ -96,10 +107,11 @@ object-fit: cover;
   margin-bottom: 15px;
   
 }
+
 .post_container{
   min-height: 35vh;
   margin: auto;
-  width: 50vw;
+  width: 600px;
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -109,46 +121,76 @@ object-fit: cover;
   -webkit-backdrop-filter: blur(10px);
   border-radius: 10px;
   box-shadow: 0 8px 23px 0 rgba(0, 0, 0, 0.2);
+  box-align: center;
 }
-
+.post_container h1{
+  box-align: center;
+  margin-left: 26%;
+}
 .post_input1{
   border: none;
-  background-color: rgb(11, 58, 58);
-  width: 300px;
+  background-color: rgb(26, 100, 100);
+  width: 500px;
   height: 30px;
   color: aliceblue;
   outline: none;
-  margin: 10px;
+  margin-left: 50px;
+  margin-bottom: 10px;
   margin-top: 15px;
-  
+  border-radius:4px;
 }
 .post_input2{
   border: none;
-  background-color: rgb(11, 58, 58);
-  width: 1000px;
-  height: 200px;
-  color: aliceblue;
+  background-color: rgb(26, 100, 100);
+  width: 500px;
+  height: 100px;
+  color: rgb(250, 250, 250);
   outline: none;
-  margin: 10px;
-  
+  margin-left: 50px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  border-radius:4px;
 }
 .post_container button{
   background: rgb(150, 172, 110);
   color: white;
   font-weight: bold;
+  font-size: 18px;
   border: none;
-  width: 100px;
-  height: 40px;
-  margin-left: 15px;
-  margin-bottom: 5px;
+  width: 200px;
+  height: 80px;
+  margin-left: 35%;
+  margin-bottom: 25px;
   font-family: 'Poppins', sans-serif;
   border-radius: 5px;
+  
+  
+  
+}
+.upvote{
+  background-color: rgb(25, 100, 100);
+  height: 30px;
+  width:30px;
+  box-align: center;
+  
+  font-size: 18px;
+  font-family: 'Poppins', sans-serif;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  
+}
+.upvote button{
+  background: rgb(150, 172, 110);
+  color: white;
+  margin: auto;
 }
 .posts_container{
   min-height: 35vh;
   margin: auto;
   margin-top: 30px;
-  width: 50vw;
+  
+  width: 900px;
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -158,4 +200,37 @@ object-fit: cover;
   -webkit-backdrop-filter: blur(10px);
   border-radius: 10px;
   box-shadow: 0 8px 23px 0 rgba(0, 0, 0, 0.2);
+}
+.post_img_container{
+  width: 300px; /* set width of image container */
+  height: 300px; /* set height of image container */
+  border-radius: 50%; /* make image container circular */
+  overflow: hidden;
+  display: flex; /* Add display flex to center image vertically */
+  align-items: center; /* Center image vertically */
+  justify-content: center; /* Center image horizontally */
+  margin-left: 5%;
+  margin-right: 10%;
+  margin-top:5%;
+  margin-bottom:5%;
+}
+.post_img_container img{
+
+  height: 100%;
+ width: 100%;
+  object-fit: cover;
+}
+
+.addpicture{
+  text-align: center;
+  margin-right: 30px;
+  margin-left:31%;
+  margin-bottom: 30px;
+  height:50px;
+  width:500px;
+  display:flex;
+}
+::placeholder {
+  color:aliceblue;
+  text-align: start;
 }
