--- a/frontend/src/styles/login.module.css
+++ b/frontend/src/styles/login.module.css
@@ -1,6 +1,7 @@
 .parent{
   display: flex;
   height: 100vh;
+  font-family: 'Poppins', sans-serif;
 }
 .left{
  width: 30%;
@@ -16,6 +17,8 @@
   font-size: 300%;
   color: rgb(255, 240, 153);
   text-align: center;
+  font-family: 'Inter', sans-serif;
+
 }
 .right{
   width: 70%;
@@ -54,6 +57,7 @@
   font-weight: bold;
   color: #05060f99;
   transition: color .3s cubic-bezier(.25,.01,.25,1) 0s;
+  
 }
 
 .input:hover, .input:focus, .input-group:hover .input {
@@ -99,6 +103,7 @@
   touch-action: manipulation;
   will-change: transform;
   margin: 5px;
+  font-family: 'Poppins', sans-serif;
  }
  
  .button:disabled {
