--- a/frontend/src/styles/feed.module.css
+++ b/frontend/src/styles/feed.module.css
@@ -1,7 +1,9 @@
+
 input{
-    font-family: 'Poppins', sans-serif;
     text-align: start;
     margin-left:10px;
+    font-family: 'Outfit', sans-serif;
+
 
   }
  :focus::placeholder {
@@ -10,10 +12,11 @@ input{
 
 
   textarea{
-    font-family: 'Poppins', sans-serif;
     text-align: start;
     margin-left:10px;
     resize: none;
+    font-family: 'Outfit', sans-serif;
+
   }
   .pick_file {
   color: rgb(67, 1, 128);
@@ -47,9 +50,9 @@ margin: 10px;
 
 }
 .image_container {
-  width: 500px; /* set width of image container */
-  height: 500px; /* set height of image container */
-  border-radius: 50%; /* make image container circular */
+  width: 300px; /* set width of image container */
+  height: 300px; /* set height of image container */
+  border-radius: 20px; /* make image container circular */
   overflow: hidden;
   display: flex; /* Add display flex to center image vertically */
   align-items: center; /* Center image vertically */
@@ -136,43 +139,32 @@ object-fit: cover;
   .post_container button{
     background: rgb(150, 172, 110);
     color: white;
-    font-weight: bold;
     font-size: 18px;
     border: none;
-    width: 200px;
-    height: 80px;
-    margin-left: 35%;
+    min-width: 100px;
+    height: 50px;
+    margin-left: 50px;
     margin-bottom: 25px;
-    
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Outfit', sans-serif;
     border-radius: 5px;
     
     
     
   }  
-  .deletePost{
-   height: 40px;
-   width:80px;
-   position: relative;
-   margin-top: 25px;
-   margin-left:145px;
-   margin-bottom: 20px;
-
-  }
-
-  .deletePost button{
-    background: rgb(136, 14, 14);
-    height: 40px;
-    width:100px;
-    margin: auto;
-    border-radius: 5px;
-    border: none;
-    font-size: 14px;
-    font-family: 'Poppins', sans-serif;
-    color: white;
+  .delete{
     
+      background: rgb(177, 79, 61);
+      color: white;
+      font-size: 18px;
+      border: none;
+      min-width: 100px;
+      height: 50px;
+      margin-left: 50px;
+      margin-bottom: 25px;
+      font-family: 'Outfit', sans-serif;
+      border-radius: 5px;
+       
   }
-
   
   .upvote{
     background-color: rgb(25, 100, 100);
@@ -213,7 +205,7 @@ object-fit: cover;
   .preview_img_container{
     width: 60px; /* set width of image container */
    height: 60px;
-    border-radius: 40%; /* make image container circular */
+    border-radius: 50%; /* make image container circular */
     overflow: hidden;
      /* Add display flex to center image vertically */
     align-items: center; /* Center image vertically */
@@ -222,20 +214,20 @@ object-fit: cover;
   }
   .post_img_container{
     width: 300px; /* set width of image container */
-    height: 300px; /* set height of image container */
-    border-radius: 50%; /* make image container circular */
+    height: 35vh; /* set height of image container */
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    
     overflow: hidden;
     display: flex; /* Add display flex to center image vertically */
     align-items: center; /* Center image vertically */
     justify-content: center; /* Center image horizontally */
-    margin-left: 5%;
     margin-right: 10%;
-    margin-top:5%;
-    margin-bottom:5%;
+   
   }
   .post_img_container img{
   
-    height: 100%;
+  height: 100%;
    width: 100%;
     object-fit: cover;
   }
@@ -252,5 +244,23 @@ object-fit: cover;
   ::placeholder {
     color:aliceblue;
     text-align: start;
-    
+  }
+
+  .tag_container {
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
+  }
+  .tag_container ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .tag_container li {
+    background-color: rgb(26, 100, 100);
+    border-radius: 3px;
+    padding: 5px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    display: inline-block;
   }
