--- a/frontend/src/styles/profile.module.css
+++ b/frontend/src/styles/profile.module.css
@@ -4,8 +4,7 @@ body{
 }
 h1{
     color: rgb(255, 240, 153);
-    font-size: 300%;
-    font-weight: 900;
+    
 }
 h2{
     margin: 0;
@@ -15,13 +14,14 @@ h3{
 }
 
 .picture {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
     object-fit: cover;
     display: block;
     overflow: hidden;
     margin: 20px auto;
+    border: 2px solid rgba(211, 188, 113, 0.664);
     
 }
 .profile{
@@ -51,3 +51,43 @@ h3{
     text-align: center;
     
 }
+.button {
+    appearance: none;
+    background-color: rgb(255, 240, 153);
+    border: 0.125em solid #383838;
+    border-radius: 0.9375em;
+    box-sizing: border-box;
+    color: #383838;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 3.75em;
+    min-width: 0;
+    outline: none;
+    padding: 1em 2.3em;
+    text-align: center;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+    margin: 5px;
+   }
+    .button:disabled {
+    pointer-events: none;
+   }
+   
+   .button:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+   }
+   
+   .button:active {
+    box-shadow: none;
+    transform: translateY(0);
+   }
