--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,8 +6,8 @@
 body {
   margin: 0;
   box-sizing: border-box;
-  background: rgb(60, 72, 107);
-  color: white;
+  background: #ffffff;
+  color: rgb(0, 0, 0);
   font-family: 'Outfit', sans-serif;
 }
 .img{
