--- a/frontend/src/styles/buttons.module.css
+++ b/frontend/src/styles/buttons.module.css
@@ -1,6 +1,6 @@
-button {
+.button {
     font-size: 18px;
-    color: #e1e1e1;
+    color: #000000;
     font-family: inherit;
     font-weight: 800;
     cursor: pointer;
@@ -11,20 +11,21 @@ button {
     transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
     transition-duration: 400ms;
     transition-property: color;
+    
   }
   
-  button:focus,
-  button:hover {
-    color: #fff;
+  .button:focus,
+  .button:hover {
+    color: #7f9ec5;
   }
   
-  button:focus:after,
-  button:hover:after {
+  .button:focus:after,
+  .button:hover:after {
     width: 100%;
     left: 0%;
   }
   
-  button:after {
+  .button:after {
     content: "";
     pointer-events: none;
     bottom: -2px;
@@ -32,8 +33,76 @@ button {
     position: absolute;
     width: 0%;
     height: 2px;
-    background-color: #fff;
+    background-color: #7f9ec5;
     transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
     transition-duration: 400ms;
     transition-property: width, left;
   }
+  .arrow{
+    position: absolute;
+    justify-self: left;
+    margin: 15px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition-duration: 400ms;
+    color: rgb(255, 255, 255);
+  }
+  .arrow:hover{
+   transform: scale(1.2);
+    
+  }
+  .arrow:hover a{
+    transform: scale(1.1);
+    
+    
+  }
+  .arrow a{
+    color: rgb(255, 251, 190);
+    font-size: 120%;
+    justify-self: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+  .button2 {
+    font-family: 'Outfit', sans-serif;
+    appearance: none;
+    background-color: #ffcd6f;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: normal;
+    height: 54px;
+    width: 130px;
+    outline: none;
+    text-align: center;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+    margin:10px;
+   }
+   
+
+   
+   .button2:hover {
+    color: #ffffff;
+    background-color: #5cbbd8;
+    border: 1px solid #30a5af;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+   }
+   
+   .button2:active {
+    box-shadow: none;
+    
+   }
