--- a/frontend/src/styles/feed.module.css
+++ b/frontend/src/styles/feed.module.css
@@ -1,266 +1,307 @@
-
-input{
-    text-align: start;
-    margin-left:10px;
-    font-family: 'Outfit', sans-serif;
-
-
-  }
- :focus::placeholder {
-    color: transparent;
-  }
+input {
+  text-align: start;
+  margin-left: 10px;
+  font-family: 'Outfit', sans-serif;
 
 
-  textarea{
-    text-align: start;
-    margin-left:10px;
-    resize: none;
-    font-family: 'Outfit', sans-serif;
+}
 
-  }
-  .pick_file {
-  color: rgb(67, 1, 128);
+:focus::placeholder {
+  color: rgb(197, 197, 197);
+}
+
+
+textarea {
+  text-align: start;
+  margin-left: 10px;
+  resize: none;
+  font-family: 'Outfit', sans-serif;
+
+}
+
+.pick_file {
+  color: rgb(0, 0, 0);
   font-size: 35px;
-  margin-left:30px;
-  margin-top:5px;
+  margin-left: 30px;
+  margin-top: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  
-  
 }
-.recipe{
-    background:green;
-width:300px; 
-border: none;
-background-color: rgb(26, 100, 100);
-border-radius:4px;
-color: aliceblue;
-margin: 10px;
 
+.recipe {
+  width: 300px;
+  border: none;
+  background-color: rgb(161, 161, 161);
+  border-radius: 4px;
+  color: rgb(255, 255, 255);
+  margin: 10px;
 }
-.description{
-    background:green;
-width:300px; 
-border: none;
-background-color: rgb(26, 100, 100);
-border-radius:4px;
-color: aliceblue;
-margin: 10px;
 
+.description {
+  width: 300px;
+  border: none;
+  background-color: rgb(49, 49, 49);
+  border-radius: 4px;
+  color: rgb(255, 255, 255);
+  margin: 10px;
 }
+
 .image_container {
-  width: 300px; /* set width of image container */
-  height: 300px; /* set height of image container */
-  border-radius: 20px; /* make image container circular */
+  width: 300px;
+  /* set width of image container */
+  height: 300px;
+  /* set height of image container */
+  border-radius: 20px;
+  /* make image container circular */
   overflow: hidden;
-  display: flex; /* Add display flex to center image vertically */
-  align-items: center; /* Center image vertically */
-  justify-content: center; /* Center image horizontally */
-  
-  }
-  
+  display: flex;
+  /* Add display flex to center image vertically */
+  align-items: center;
+  /* Center image vertically */
+  justify-content: center;
+  /* Center image horizontally */
+
+}
+
 .image_container img {
-height: 100%;
-width: 100%;
-object-fit: cover;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
 
-
+.header{
+  height: 20vh;
 }
 .container {
-    background: rgb(49, 117, 121);
-    border-radius: 2px;
-    box-shadow: 0 8px 13px 0 rgba(41, 41, 43, 0.548);
-    width: 90%;
-    margin:auto;
-    text-align: center;
-    padding: 20px;
-    backdrop-filter: blur(10px);
-}
-.searchbar{
-    border: none;
-    background-color: rgb(26, 100, 100);
-    width: 500px;
-    height: 50px;
-    color: aliceblue;
-    outline: none;
-    margin-left: 50px;
-    margin-bottom: 10px;
-    margin-top: 15px;
-    border-radius:4px;
-    font-size: 16px;
+  background: rgb(255, 255, 255);
+  border-radius: 2px;
+  box-shadow: 0 8px 13px 0 rgba(41, 41, 43, 0.705);
+  width: 90%;
+  margin: auto;
+  padding: 20px;
+  backdrop-filter: blur(10px);
+  justify-content: center;
+  display: flex;
+  text-align: center;
 
 }
-.post_container{
-    min-height: 35vh;
-    margin: auto;
-    margin-top:20px;
-    margin-bottom: 20px;
-    width: 600px;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background: linear-gradient(135deg,rgb(48, 51, 51),rgb(36, 44, 44),0 );
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 10px;
-    box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
-    box-align: center;
-  }
-  .post_container h1{
-    margin: auto;
-    margin-top: 10px;
-  }
-  .post_input1{
-    border: none;
-    background-color: rgb(26, 100, 100);
-    width: 500px;
-    height: 30px;
-    color: aliceblue;
-    outline: none;
-    margin-left: 50px;
-    margin-bottom: 10px;
-    margin-top: 15px;
-    border-radius:4px;
-  }
-  .post_input2{
-    border: none;
-    background-color: rgb(26, 100, 100);
-    width: 500px;
-    height: 100px;
-    color: rgb(250, 250, 250);
-    outline: none;
-    margin-left: 50px;
-    margin-bottom: 10px;
-    margin-right: 20px;
-    border-radius:4px;
-  }
-  .post_container button{
-    background: rgb(150, 172, 110);
-    color: white;
-    font-size: 18px;
-    border: none;
-    min-width: 100px;
-    height: 50px;
-    margin-left: 50px;
-    margin-bottom: 25px;
-    font-family: 'Outfit', sans-serif;
-    border-radius: 5px;
-    
-    
-    
-  }  
-  .delete{
-    
-      background: rgb(177, 79, 61);
-      color: white;
-      font-size: 18px;
-      border: none;
-      min-width: 100px;
-      height: 50px;
-      margin-left: 50px;
-      margin-bottom: 25px;
-      font-family: 'Outfit', sans-serif;
-      border-radius: 5px;
-       
-  }
-  
-  .upvote{
-    background-color: rgb(25, 100, 100);
-    height: 40px;
-    width:40px;
-    box-align: center;
-    margin-top: 25px;
-    margin-left:40px;
-    font-size: 22px;
-    font-family: 'Poppins', sans-serif;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    
-  }
 
-  .upvote button{
-    background: rgb(150, 172, 110);
-    color: white;
-    margin: auto;
-  }
-  .posts_container{
-    min-height: 35vh;
-    margin: auto;
-    margin-top: 30px;
-    
-    width: 900px;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background: linear-gradient(135deg,rgb(48, 51, 51),rgb(36, 44, 44),0 );
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 10px;
-    box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
-  }
-  .preview_img_container{
-    width: 60px; /* set width of image container */
-   height: 60px;
-    border-radius: 50%; /* make image container circular */
-    overflow: hidden;
-     /* Add display flex to center image vertically */
-    align-items: center; /* Center image vertically */
-    justify-content: center; /* Center image horizontally */
-    margin-left: 20px;
-  }
-  .post_img_container{
-    width: 300px; /* set width of image container */
-    height: 35vh; /* set height of image container */
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    
-    overflow: hidden;
-    display: flex; /* Add display flex to center image vertically */
-    align-items: center; /* Center image vertically */
-    justify-content: center; /* Center image horizontally */
-    margin-right: 10%;
-   
-  }
-  .post_img_container img{
-  
-  height: 100%;
+.searchbar {
+  background-color: rgb(255, 255, 255);
+  width: 500px;
+  height: 50px;
+  color: rgb(0, 0, 0);
+  border: solid 1px black;
+  outline: none;
+  margin: 10px;
+  border-radius: 5px;
+  font-size: 18px;
+
+}
+
+.post_container {
+  height: 65vh;
+  align-self: center;
+  justify-self: center;
+  margin: auto;
+  width:93%;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
+  background-color: #F28482;
+}
+
+
+.post_header{
+   margin: 25px;
+   display: flex;
    width: 100%;
-    object-fit: cover;
-  }
+   color: white;
+}
+.input_fields{
+  display: flex;
+  flex-direction: column;
   
-  .addpicture{
-    text-align: center;
-    margin-right: 30px;
-    margin-left:31%;
-    margin-bottom: 30px;
-    height:50px;
-    width:500px;
-    display:flex;
-  }
-  ::placeholder {
-    color:aliceblue;
-    text-align: start;
-  }
+}
 
-  .tag_container {
-    display: flex;
-    flex-direction: row;
-    margin: 5px;
-  }
-  .tag_container ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  .tag_container li {
-    background-color: rgb(26, 100, 100);
-    border-radius: 3px;
-    padding: 5px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    display: inline-block;
-  }
+.post_input1 {
+  border: none;
+  background-color: rgb(235, 235, 235);
+  width: 500px;
+  height: 30px;
+  color: rgb(0, 0, 0);
+  outline: none;
+  border-radius: 4px;
+  border: 2px solid rgb(255, 255, 255);
+  margin-top: 10px;
+
+}
+
+.post_input2 {
+  border: none;
+  background-color: rgb(235, 235, 235);
+  width: 500px;
+  height: 100px;
+  color: rgb(0, 0, 0);
+  outline: none;
+  border-radius: 4px;
+  border: 2px solid rgb(255, 255, 255);
+}
+
+
+.delete {
+  background: rgb(182, 55, 55);
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  border: none;
+  min-width: 100px;
+  height: 50px;
+  font-family: 'Outfit', sans-serif;
+  border-radius: 5px;
+  box-sizing: border-box;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  margin-left: 50px;
+}
+
+.delete:hover {
+  transform: scale(1.1);
+
+}
+
+.upvote {
+  height: 40px;
+  width: 110px;
+  font-size: 18px;
+  border-radius: 5px;
+  border: none;
+  background-color: #ffcd6f;
+  color: rgb(255, 255, 255);
+  margin-left: auto;
+  margin-right: 20px;
+  font-family: 'Outfit', sans-serif;
+  
+}
+
+
+.posts_container {
+  min-height: 35vh;
+  width: 900px;
+  display: flex;
+  background: linear-gradient(135deg, rgb(48, 51, 51), rgb(36, 44, 44), 0);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
+  text-align: left;
+}
+
+.preview_img_container {
+  width: 60px;
+  /* set width of image container */
+  height: 60px;
+  border-radius: 50%;
+  /* make image container circular */
+  overflow: hidden;
+  /* Add display flex to center image vertically */
+  align-items: center;
+  /* Center image vertically */
+  justify-content: center;
+  /* Center image horizontally */
+  margin-left: 20px;
+}
+
+.post_img_container {
+  width: 300px;
+  /* set width of image container */
+  height: 35vh;
+  /* set height of image container */
+  border-bottom-left-radius: 10px;
+
+  overflow: hidden;
+  display: flex;
+  /* Add display flex to center image vertically */
+  align-items: center;
+  /* Center image vertically */
+  justify-content: center;
+  /* Center image horizontally */
+  margin-right: 10%;
+
+}
+
+.post_img_container img {
+
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.addpicture {
+  text-align: center;
+  margin-right: 30px;
+  margin-left: 31%;
+  margin-bottom: 30px;
+  height: 50px;
+  width: 500px;
+  display: flex;
+}
+
+::placeholder {
+  color: rgb(0, 0, 0);
+  text-align: start;
+}
+
+.tag_container {
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+}
+
+.tag_container ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.tag_container li {
+  background-color: rgb(32, 32, 32);
+  color: white;
+  border-radius: 3px;
+  padding: 5px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+}
+
+.posts_header {
+  height: 55px;
+  background-color: #F28482;
+  margin-top: 30px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  box-shadow: 2px;
+  box-shadow: 0 0.5px 2px 0 rgba(0, 0, 0, 0.808);
+  color: white;
+  display: flex;
+  align-items: center;
+
+}
+
+.posts_header img {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 5px;
+  border: solid 1px white;
+  margin-left: 10px;
+}
