--- a/frontend/src/styles/header.module.css
+++ b/frontend/src/styles/header.module.css
@@ -4,14 +4,17 @@ margin: 0;
 padding: 10px;
 display: flex;
 justify-content: flex-end;
+align-items: center;
+
 }
+
 .button {
     appearance: none;
-    background-color: rgb(255, 240, 153);
-    border: 0.125em solid #383838;
-    border-radius: 0.9375em;
+    background-color: #ffffff;
+    border: 0.125em solid #000000;
+    border-radius: 5px;
     box-sizing: border-box;
-    color: #383838;
+    color: #000000;
     cursor: pointer;
     display: inline-block;
     font-size: 16px;
@@ -36,8 +39,9 @@ justify-content: flex-end;
    }
    
    .button:hover {
-    color: #fff;
-    background-color: #1A1A1A;
+    color: #ffffff;
+    background-color: #292929;
+    border: 0.125em solid #4DA1A9;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
    }
