--- a/frontend/src/styles/profile.module.css
+++ b/frontend/src/styles/profile.module.css
@@ -1,13 +1,11 @@
-body{
-    text-align: center;
-    
-}
+
 h1{
-    color: rgb(255, 240, 153);
-    
+    font-size: 50px;
+    text-align: center;
 }
 h2{
     margin: 0;
+    
 }
 h3{
     margin: 20px;
@@ -21,27 +19,29 @@ h3{
     display: block;
     overflow: hidden;
     margin: 20px auto;
-    border: 2px solid rgba(211, 188, 113, 0.664);
+    border: 3px solid rgb(0, 0, 0);
     
 }
 .profile{
-    background: rgb(49, 117, 121);
+    background: rgb(255, 255, 255);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    border-radius: 10px;
-    border: 2px solid rgba(169, 173, 173, 0.2);
+    border-radius: 5px;
+    border: 2px solid rgb(0, 0, 0);
     box-shadow: 0 8px 23px 0 rgba(37, 37, 37, 0.562);
     text-align: center;
     width: 40vw;
     margin: 100px auto;
     min-height: 50vh;
+    
 }
 .header{
     max-width: 100vw;
     min-height: 10vh;
     margin: 0;
-    background-color: rgb(49, 117, 121);
+    background-color: rgb(255, 255, 255);
     box-sizing: border-box;
+    text-align: center;
 
 }
 .text_container{
@@ -49,45 +49,10 @@ h3{
     flex-direction: row;
     justify-content: center;
     text-align: center;
-    
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
 }
-.button {
-    appearance: none;
-    background-color: rgb(255, 240, 153);
-    border: 0.125em solid #383838;
-    border-radius: 0.9375em;
-    box-sizing: border-box;
-    color: #383838;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: normal;
-    margin: 0;
-    min-height: 3.75em;
-    min-width: 0;
-    outline: none;
-    padding: 1em 2.3em;
-    text-align: center;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    will-change: transform;
-    margin: 5px;
-   }
-    .button:disabled {
-    pointer-events: none;
-   }
-   
-   .button:hover {
-    color: #fff;
-    background-color: #1A1A1A;
-    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-    transform: translateY(-2px);
-   }
-   
-   .button:active {
-    box-shadow: none;
-    transform: translateY(0);
-   }
+.text_container Link{
+    text-decoration: none;
+}
