Signed-off-by: unknown <ludda756@student.liu.se>

--- a/frontend/src/styles/buttons.module.css
+++ b/frontend/src/styles/buttons.module.css
@@ -106,3 +106,39 @@
     box-shadow: none;
     
    }
+   .button3 {
+    font-family: 'Outfit', sans-serif;
+    appearance: none;
+    background-color: #38dd6f;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: normal;
+    height: 40px;
+    width: 100px;
+    outline: none;
+    text-align: center;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+   }
+   
+
+   
+   .button3:hover {
+    color: #000000;
+    background-color: #ffffff;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: scale(1.05);
+   }
+   
+   .button3:active {
+    box-shadow: none;
+    
+   }
