--- a/frontend/src/styles/feed.module.css
+++ b/frontend/src/styles/feed.module.css
@@ -41,10 +41,10 @@ textarea {
 .description {
   width: 300px;
   border: none;
-  background-color: rgb(49, 49, 49);
-  border-radius: 4px;
-  color: rgb(255, 255, 255);
-  margin: 10px;
+  margin-top:54px;
+  font-family: 'Outfit', sans-serif;
+  color: rgb(0, 0, 0);
+  
 }
 
 .image_container {
@@ -71,20 +71,43 @@ textarea {
 }
 
 .header{
-  height: 20vh;
+  height: 8vh;
+  margin-bottom: 5px;
+  background-color:#71caf3;
+  box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
+  align-items: center;
+  width: 100vw;
+  color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
+.header_photo{
+  display: flex;
+ margin-top: auto;
+ margin-bottom: auto;
+}
+.header_text{
+margin: auto;
+}
+.header_button{
+ display: flex;
+ justify-content: end;
+ margin-right: 25px;
+
+  }
 .container {
   background: rgb(255, 255, 255);
-  border-radius: 2px;
+  border-radius: 15px;
+  border: 0.5px solid rgb(185, 185, 185);
   box-shadow: 0 8px 13px 0 rgba(41, 41, 43, 0.705);
   width: 90%;
   margin: auto;
   padding: 20px;
   backdrop-filter: blur(10px);
   justify-content: center;
-  display: flex;
   text-align: center;
-
+  display: flex;
+  margin-top: 150px;
 }
 
 .searchbar {
@@ -104,7 +127,9 @@ textarea {
   height: 65vh;
   align-self: center;
   justify-self: center;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 200px;
   width:93%;
   display: flex;
   flex-direction: column;
@@ -114,7 +139,8 @@ textarea {
 
 
 .post_header{
-   margin: 25px;
+  margin-top: 100px;
+   margin: 10px;
    display: flex;
    width: 100%;
    color: white;
@@ -181,7 +207,6 @@ textarea {
   margin-left: auto;
   margin-right: 20px;
   font-family: 'Outfit', sans-serif;
-  
 }
 
 
@@ -189,19 +214,32 @@ textarea {
   min-height: 35vh;
   width: 900px;
   display: flex;
-  background: linear-gradient(135deg, rgb(48, 51, 51), rgb(36, 44, 44), 0);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  
+  background-color: white;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
   text-align: left;
 }
 
+.grid_container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 300px;
+  grid-gap: 10px;
+}
+
+.grid_container2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 300px;
+  grid-gap: 10px;
+}
+
 .preview_img_container {
-  width: 60px;
+  width: 300px;
   /* set width of image container */
-  height: 60px;
+  height: 300px;
   border-radius: 50%;
   /* make image container circular */
   overflow: hidden;
@@ -273,6 +311,7 @@ textarea {
   margin-right: 10px;
   margin-bottom: 10px;
   display: inline-block;
+  flex-direction: column;
 }
 
 .wrapper {
@@ -296,12 +335,11 @@ textarea {
 
 }
 
-.posts_header img {
+.posts_header_img {
   width: 45px;
   height: 45px;
   border-radius: 50%;
   object-fit: cover;
-  margin: 5px;
   border: solid 1px white;
   margin-left: 10px;
 }
