--- a/frontend/src/styles/buttons.module.css
+++ b/frontend/src/styles/buttons.module.css
@@ -41,11 +41,11 @@
   .arrow{
     position: absolute;
     justify-self: left;
-    margin: 15px;
-    width: 40px;
+    margin: 20px;
+    width: 100px;
     height: 40px;
-    border-radius: 50%;
-    background: rgb(0, 0, 0);
+    border-radius: 20px;
+    background: #5192b1;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -58,18 +58,14 @@
    transform: scale(1.2);
     
   }
-  .arrow:hover a{
-    transform: scale(1.1);
-    
-    
-  }
   .arrow a{
-    color: rgb(255, 251, 190);
+    color: rgb(255, 255, 255);
     font-size: 120%;
     justify-self: center;
     align-items: center;
     justify-content: center;
     display: flex;
+    text-decoration: none;
   }
   .button2 {
     font-family: 'Outfit', sans-serif;
