--- a/frontend/src/styles/feed.module.css
+++ b/frontend/src/styles/feed.module.css
@@ -237,6 +237,8 @@ outline: none;
    border: solid 1px rgba(128, 128, 128, 0.644);
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
+   box-sizing: border-box;
+   padding: 10px;
 
  }
 .delete {
@@ -272,7 +274,30 @@ outline: none;
   font-family: 'Outfit', sans-serif;
 }
 
+.comment_header{
+height: 60px;
+display: flex;
+align-items: center;
+border: solid 0.5px grey;
+width: 90%;
+margin: auto;
+box-sizing: border-box;
+padding: 5px;
 
+
+}
+.comment{
+display: flex;
+padding: 5px;
+box-sizing: border-box;
+margin: auto;
+width: 90%;
+box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+border-bottom-left-radius: 5px;
+border-bottom-right-radius: 5px;
+background-color: rgba(209, 209, 209, 0.342);
+
+}
 .posts_container {
   min-height: 300px;
   width: 900px;
@@ -312,6 +337,13 @@ outline: none;
   /* Center image horizontally */
   margin-right: 10%;
 
+}
+.post_img_container2 {
+  width: 310px;
+  /* set width of image container */
+  height: 310px;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .post_img_container img {
