--- a/frontend/src/styles/header.module.css
+++ b/frontend/src/styles/header.module.css
@@ -10,7 +10,7 @@ align-items: center;
 
 .button {
     appearance: none;
-    background-color: #ffffff;
+    background-color: #ffffffa1;
     border: 0.125em solid #000000;
     border-radius: 5px;
     box-sizing: border-box;
