--- a/frontend/src/styles/profile.module.css
+++ b/frontend/src/styles/profile.module.css
@@ -1,59 +1,101 @@
-
-h1{
-    font-size: 50px;
-    text-align: center;
-}
-h2{
+h1 {
+    font-size: 40px;
     margin: 0;
-    
 }
-h3{
+
+h2 {
+    margin: 0;
+
+}
+
+h3 {
     margin: 20px;
+    
 }
 
 .picture {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    border-radius: 5px;
     object-fit: cover;
     display: block;
     overflow: hidden;
-    margin: 20px auto;
-    border: 1px solid rgb(156, 156, 156);
-    
-}
-.profile{
-    background: rgb(255, 255, 255);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 5px;
-    border: 1px solid rgb(156, 156, 156);
-    box-shadow: 0 8px 23px 0 rgba(37, 37, 37, 0.562);
-    text-align: center;
-    width: 40vw;
-    margin: 100px auto;
-    min-height: 50vh;
-   
-    
-}
-.header{
-    max-width: 100vw;
-    min-height: 10vh;
-    margin: 0;
-    background-color: rgb(255, 255, 255);
-    box-sizing: border-box;
-    text-align: center;
+    border: solid 1px rgb(139, 139, 139);  
+    box-shadow: 0 2px 10px 0 rgba(107, 107, 107, 0.774);
 
 }
-.text_container{
+
+.profile {
+    width: 100vw;
+    min-height: 30vh;
+    margin-top: 100px;
+    margin-left: 20px;
+    color: rgb(107, 107, 107);
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
+    
 }
-.text_container Link{
+.profile2 {
+    width: 100vw;
+    min-height: 10vh;
+    margin-top: 20px;
+    margin-left: 20px;
+    color: rgb(107, 107, 107);
+    display: flex;
+    flex-direction: column;
+    
+
+}
+
+.header {
+    max-width: 100vw;
+    background: #5cbbd8;
+    color: white;
+    height: 10vh;
+    margin: 0;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    box-shadow: 0 2px 10px 0 rgba(107, 107, 107, 0.774);
+
+
+}
+
+.text_container {
+    display: flex;
     text-decoration: none;
+    margin-left: auto;
+    margin-right: 40px;
+    
+    
+
+}
+.info_container{
+    display: flex;
+    height: 30vh;
+ 
+}
+.info_slot{
+   margin-left: 200px;
+   width: 500px;
+    height: 300px;
+   text-align: center;
+   display: flex;
+   flex-direction: column;
+   justify-content: end;
+   box-sizing: border-box;
+   padding: 80px;
+   border: solid 1px rgb(173, 173, 173);  
+   box-shadow: 0 2px 10px 0 rgba(107, 107, 107, 0.774);
+   border-radius: 5px;
+
+}
+.your{
+    text-align: center;
+    width: 100vw;
+    height: 5vh;
+    margin-top: 100px;
+    color: rgb(107, 107, 107);
+
+
 }
